# salary-prediction-mcp-server

./: README.md  explain_model.py  main.py  pyproject.toml  salary_mcp_server.py  salary_model.pkl  sample_salary_dataset.csv  train_model.py
