[project]
name = "salary-prediction-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.5",
    "mcp>=1.26.0",
    "openai>=2.21.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
]
